--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -159,19 +159,22 @@ Wywołanie pliku wykonywalnego z grą ({\em thesis\_1.exe}) powoduje uruchomieni
 
 \section{Postacie i zdolności}
 	\label{characters-skills}
-Gra składa się wielu nieodzownych elementów, jednym z istotniejszych jest niewątpliwie postać którą gracz kontroluje. Podstawową reprezentacją gracza w silniku UE4 jest klasa Pawn. 
-Pionek jest fizyczną reprezentacją gracza w świecie gry który może być kontrolowany przez gracza lub komputer za pomocą kontrolerów przedstawionych we wstępie dokumentu. Pionek jest klasą bazową dla klasy Character, której głownym rozszerzeniem jest CharacterMovementComponent pozwalający naszemu awatarowi na poruszanie się przez chodzenie, skakanie, bieganie, spadanie czy pływanie. CharacterMovementComponent posiada w pełni zaimplementowaną obsługę networkingu w skład którego wchodzi system korekcji oraz predykcji ruchów podczas opóźnień wynikających z transmisji danych przez sieć.
-	\subsection{Pawn, Character i PlayerController}
-	Podczas tworzenia owej postaci pojawia się wiele pytań i problemów do rozwiązania.
-Pierwszym z nich jest sposób zbierania danych od gracza w sposób pozwalający na ponowne wykorzystanie kodu w postaciach o podobnych cechach. UE4 pozwala na obsługę danych wejściowych w klasach Pawn lub w PlayerController. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy które funkcjonalności powinny zostać obsłużone przez którą z tych klas. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie Pawn. Jednak gdy obsługa sterowania jest skomplikowana implementacja PlayerController’a staje się nieunikniona. PlayerController pozwala na przykład na sterowanie wieloma awatarami na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą PlayerController’a jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę a kontrolowane przez niego pionki mogą się zmieniać. Przykładowo podczas odradzania naszego pionka utworzony zostaje nowy obiekt a kontroler pozostaje ten sam, więc dane których nie chcemy stracić takie jak zdobyte punkty czy złoto powinny być składową PlayerControllera.
-
+Gra składa się wielu nieodzownych elementów, jednym z istotniejszych jest niewątpliwie postać którą gracz kontroluje.
+	\subsection{Pawn a PlayerController}
+	Podczas tworzenia postaci pojawia się wiele pytań i problemów do rozwiązania.
+Jednym z nich jest sposób zbierania danych od gracza w sposób pozwalający na ponowne wykorzystanie kodu w postaciach o podobnych cechach. UE4 pozwala na obsługę danych wejściowych w klasach Pawn lub w PlayerController. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy obsługę wejścia pomiędzy tymi klasami. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie Pawn. Jednak gdy obsługa sterowania jest skomplikowana implementacja PlayerController’a staje się nieunikniona. PlayerController pozwala na przykład na sterowanie wieloma awatarami na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą PlayerController’a jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę a kontrolowane przez niego pionki mogą się zmieniać. Przykładowo podczas odradzania naszego pionka utworzony zostaje nowy obiekt a kontroler pozostaje ten sam, więc dane których nie chcemy stracić takie jak zdobyte punkty czy złoto powinny być składową PlayerControllera.
 	W projekcie jako klasy bazowej do wirtualnej reprezentacji gracza użyto klasy Character, a dane wejściowe są całkowicie obsługiwane przez PlayerController
 	\subsection{BaseCharacter}
-	Na potrzeby projektu, w celu rozwinięcia podstawowych możliwości klasy udostępnionej przez silnik stworzono klasę BaseCharacter dziedzicząca po Character. Głównym celem było pozwolenie graczom na dowolne dostosowanie zdolności awatara. Problem ten został rozwiązany za pomocą tablicy obiektów USkill które posiadają metody OnPress oraz OnRelease zawierające logikę, która wykonywana jest gdy gracz naciska lub zwalnia odpowiedni przycisk.		
+	Na potrzeby projektu, w celu rozwinięcia podstawowych możliwości klasy Character udostępnionej przez silnik stworzono pochodną klasę BaseCharacter. Głównym celem było pozwolenie graczom na dowolne dostosowanie zdolności awatara. Problem ten został rozwiązany za pomocą tablicy obiektów USkill które posiadają metody OnPress oraz OnRelease zawierające logikę, która wykonywana jest gdy gracz naciska lub zwalnia odpowiedni przycisk.		
 	Dodane zostały również zmienne których silnik używa do odgrywania odpowiednich animacji takich jak animacja uniku czy animacja czarowania oraz funkcje które zmieniają wartości tych zmiennych na serwerze gdy gracz na maszynie klienckiej wciśnie odpowiednie przyciski.
 	\subsection{BasePlayerController}
 	Klasa BasePlayerController jest stworzonym na potrzeby projektu rozszerzeniem klasy PlayerController. Jest ona odpowiedzialna za obsługę danych wejściowych zebranych od gracza. 
 Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od ustawień w odpowiednim oknie interfejsu użytkownika gracz może korzystać z klawiatury oraz myszy lub z kontrolera gier. Przy wyborze klawiatury i myszy postać można poruszać za pomocą klawiszy W, A, S oraz D a postać obrócona jest zawsze w kierunku kursora myszy.  Przy wyborze kontrolera gier kierunek, w który postać spogląda oraz porusza się jest wyznaczany na podstawie wychyleń odpowiednio, prawego oraz lewego drążka kontrolera. W obu przypadkach wciśniecie klawisza odpowiadającego za skok lub unik wywołuje odpowiednie metody które odpowiedzialne są za ruch naszego awatara oraz odegranie animacji. Wciśnięcie klawiszy odpowiadających za wykonanie zdolności działa 2 etapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody OnPress z klasy USkill, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda OnRelease, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić stan gracza do momentu przed kliknięciem przycisku.
+	\subsection{BaseCharacterMovementComponent}
+	CharacterMovementComponent jest składową klasy Character odpowiedzialnej za przemieszczanie się awatara która automatycznie obsługuje networking. System predykcji, replikacji i korekcji w sieciowych grach korzystających z CharacterMovementComponent działa w następujący sposób. Co klatkę wywoływana jest metoda TickComponent gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie  w zależności od tego czy Character jest kontrolowany lokalnie czy sieciowo wywoływana jest metoda PerformMovement lub ReplicateMoveToServer. Metoda ReplicateMoveToServer dodaje ruch do listy oczekujących ruchów, następnie wywołuje lokalnie metodę PerformMovement i replikuje ruch na serwer poprzez zdalne wywołanie metody ServerMove. ServerMove przesuwa postać na serwerze na odpowiednie miejsce a następnie sprawdza czas od ostatniej odpowiedzi klienta i oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer  zdalnie wywołuje procedure ClientAdjustPosition na kliencie która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta a jego pozycja zostanie poprawiona metoda ClientAdjustPosition wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących ze znacznikiem czasu późniejszym niż znacznik czasu ruchu który został poprawiony przez serwer.
+	CharacterMovementComponent posiada system symulacji i wygładzania. Dane o aktorze takie jak jego pozycja, prędkość czy rotacja są replikowane na inne maszyny za pomocą standardowego mechanizmu replikacji. Oznacza to, że maszyny nie dostają potrzebnych im informacji co klatkę. Wymusza to potrzebę symulacji zmian w położeniu postaci pomiędzy kolejnymi pakietami danych. Symulacja polega na przesuwaniu obiektu klasy Character zgodnie z ostatnio otrzymanymi danymi na temat jego ruchu. Gdy symulacja odbiega od rzeczywistych zmian, które zaszły na innych maszynach, UE4 wygładza zmianę pozycji w celu uniknięcia nagłego widocznego skoku pozycji awatara.
+	Z powodu tych zaawansowanych systemów wszystkie zdolności postaci modyfikujące jej położenie powinny zostać zaimplementowane poprzez rozszerzenie klasy CharacterMovementComponent.
+Na potrzeby projektu, aby dodać możliwość uniku, polegającego na gwałtownym odskoku postaci w danym kierunku stworzona została klasa BaseCharacterMovementComponent. Implementacja polegała na nadpisaniu niektórych metod klasy bazowej. TickComponent oprócz swojego pierwotnego zadania sprawdza czy gracz wciska przycisk odpowiedzialny za unik. Jeżeli tak, dodawane są symulowane dane wejściowe, które naśladują poruszanie się gracza w odpowiednim kierunku. W celu zapewnienia szybszego poruszania się postaci podczas uniku nadpisano metody GetMaxSpeed oraz GetMaxAcceleration które w zależności od zmiennej wskazującej na to czy postać wykonuje unik zwracają wyższe lub niższe wartości. Ponadto wymagane było stworzenie nowych klas używanych do predykcji i zapisywania ruchu na listę oczekujących w taki sposób by ewentualna poprawa ruchu spowodowana opóźnieniami transmisji danych uwzględniła kliknięcie przez gracza przycisku uniku.
 	\subsection{Skill}
 	Jedną z głównych cech gry ,,thesis\_1`` jest możliwość wyboru czterech z wielu dostępnych zdolności do używania w trakcie rozgrywki. W tym celu powstała klasa {\em Skill} reprezentująca daną zdolność. Klasa ta powstała za pomocą kodu {\em C++} z myślą o rozszerzaniu jej blueprintami, co umożliwiają znaczniki {\em Blueprintable} oraz {\em BlueprintNativeEvent} użyte w nagłówku klasy. Każda klasa dziedzicząca po {\em Skill} reprezentuje jedną zdolność i nadpisuje bazowe funkcje {\em OnPress} oraz {\em OnRelease} logiką danej zdolności. Decyduje też o tym, które klasy postaci mogą używać danej zdolności.
 	\subsection{Wybór postaci i zdolności}
