--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -162,7 +162,7 @@ Wywołanie pliku wykonywalnego z grą ({\em thesis\_1.exe}) powoduje uruchomieni
 Gra składa się wielu nieodzownych elementów, jednym z istotniejszych jest niewątpliwie postać którą gracz kontroluje.
 	\subsection{Pawn a PlayerController}
 	Podczas tworzenia postaci pojawia się wiele pytań i problemów do rozwiązania.
-Jednym z nich jest sposób zbierania danych od gracza w sposób pozwalający na ponowne wykorzystanie kodu w postaciach o podobnych cechach. UE4 pozwala na obsługę danych wejściowych w klasach Pawn lub w PlayerController. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy obsługę wejścia pomiędzy tymi klasami. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie Pawn. Jednak gdy obsługa sterowania jest skomplikowana implementacja PlayerController’a staje się nieunikniona. PlayerController pozwala na przykład na sterowanie wieloma awatarami na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą PlayerController’a jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę a kontrolowane przez niego pionki mogą się zmieniać. Przykładowo podczas odradzania naszego pionka utworzony zostaje nowy obiekt a kontroler pozostaje ten sam, więc dane których nie chcemy stracić takie jak zdobyte punkty czy złoto powinny być składową PlayerControllera.
+Jednym z nich jest sposób zbierania danych od gracza w sposób pozwalający na ponowne wykorzystanie kodu w postaciach o podobnych cechach. UE4 pozwala na obsługę danych wejściowych w klasach Pawn lub w PlayerController. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy obsługę wejścia pomiędzy tymi klasami. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie Pawn. Jednak gdy obsługa sterowania jest skomplikowana implementacja PlayerController’a staje się nieunikniona. PlayerController pozwala na przykład na sterowanie wieloma awatarami na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą PlayerController’a jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę a kontrolowane przez niego pionki mogą się zmieniać. Przykładowo podczas odradzania naszego pionka utworzony zostaje nowy obiekt klasy postaci a kontroler pozostaje ten sam, więc dane których nie chcemy stracić takie jak zdobyte punkty czy złoto powinny być składową PlayerControllera.
 	W projekcie jako klasy bazowej do wirtualnej reprezentacji gracza użyto klasy Character, a dane wejściowe są całkowicie obsługiwane przez PlayerController
 	\subsection{BaseCharacter}
 	Na potrzeby projektu, w celu rozwinięcia podstawowych możliwości klasy Character udostępnionej przez silnik stworzono pochodną klasę BaseCharacter. Głównym celem było pozwolenie graczom na dowolne dostosowanie zdolności awatara. Problem ten został rozwiązany za pomocą tablicy obiektów USkill które posiadają metody OnPress oraz OnRelease zawierające logikę, która wykonywana jest gdy gracz naciska lub zwalnia odpowiedni przycisk.		
