--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -169,7 +169,7 @@ Jednym z nich jest sposób zbierania danych od gracza w sposób pozwalający na 
 	Dodane zostały również zmienne których silnik używa do odgrywania odpowiednich animacji takich jak animacja uniku czy animacja czarowania oraz funkcje które zmieniają wartości tych zmiennych na serwerze gdy gracz na maszynie klienckiej wciśnie odpowiednie przyciski.
 	\subsection{BasePlayerController}
 	Klasa BasePlayerController jest stworzonym na potrzeby projektu rozszerzeniem klasy PlayerController. Jest ona odpowiedzialna za obsługę danych wejściowych zebranych od gracza. 
-Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od ustawień w odpowiednim oknie interfejsu użytkownika gracz może korzystać z klawiatury oraz myszy lub z kontrolera gier. Przy wyborze klawiatury i myszy postać można poruszać za pomocą klawiszy W, A, S oraz D a postać obrócona jest zawsze w kierunku kursora myszy.  Przy wyborze kontrolera gier kierunek, w który postać spogląda oraz porusza się jest wyznaczany na podstawie wychyleń odpowiednio, prawego oraz lewego drążka kontrolera. W obu przypadkach wciśniecie klawisza odpowiadającego za skok lub unik wywołuje odpowiednie metody które odpowiedzialne są za ruch naszego awatara oraz odegranie animacji. Wciśnięcie klawiszy odpowiadających za wykonanie zdolności działa 2 etapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody OnPress z klasy USkill, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda OnRelease, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić stan gracza do momentu przed kliknięciem przycisku.
+Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od ustawień w odpowiednim oknie interfejsu użytkownika gracz może korzystać z klawiatury oraz myszy lub z kontrolera gier. Przy wyborze klawiatury i myszy postać można poruszać za pomocą klawiszy W, A, S oraz D a postać obrócona jest zawsze w kierunku kursora myszy.  Przy wyborze kontrolera gier kierunek, w który postać spogląda oraz porusza się jest wyznaczany na podstawie wychyleń odpowiednio, prawego oraz lewego drążka kontrolera. W obu przypadkach wciśniecie klawisza odpowiadającego za skok lub unik wywołuje odpowiednie metody które odpowiedzialne są za ruch naszego awatara oraz odegranie animacji. Wciśnięcie klawiszy odpowiadających za wykonanie zdolności działa 2 etapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody OnPress z klasy USkill, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda OnRelease, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić gracza do stanu sprzed kliknięcia przycisku.
 	\subsection{BaseCharacterMovementComponent}
 	CharacterMovementComponent jest składową klasy Character odpowiedzialnej za przemieszczanie się awatara która automatycznie obsługuje networking.  System predykcji, replikacji i korekcji w sieciowych grach korzystających z CharacterMovementComponent działa w następujący sposób. Co klatkę wywoływana jest metoda TickComponent gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie  w zależności od tego czy Character jest kontrolowany lokalnie czy sieciowo wywoływana jest metoda PerformMovement lub ReplicateMoveToServer. Metoda ReplicateMoveToServer dodaje ruch do listy oczekujących ruchów, następnie wywołuje lokalnie metodę PerformMovement i replikuje ruch na serwer poprzez zdalne wywołanie metody ServerMove. ServerMove przesuwa postać na serwerze na odpowiednie miejsce a następnie sprawdza czas od ostatniej odpowiedzi klienta i oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer  zdalnie wywołuje procedure ClientAdjustPosition na kliencie która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta a jego pozycja zostanie poprawiona metoda ClientAdjustPosition wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących ze znacznikiem czasu późniejszym niż znacznik czasu ruchu który został poprawiony przez serwer.
 	CharacterMovementComponent posiada system symulacji i wygładzania. Dane o aktorze takie jak jego pozycja, prędkość czy rotacja są replikowane na inne maszyny za pomocą standardowego mechanizmu replikacji. Oznacza to, że maszyny nie dostają potrzebnych im informacji co klatkę. Wymusza to potrzebę symulacji zmian w położeniu postaci pomiędzy kolejnymi pakietami danych. Symulacja polega na przesuwaniu obiektu klasy Character zgodnie z ostatnio otrzymanymi danymi na temat jego ruchu. Gdy symulacja odbiega od rzeczywistych zmian, które zaszły na innych maszynach, UE4 wygładza zmianę pozycji w celu uniknięcia nagłego widocznego skoku pozycji awatara.
