--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -176,7 +176,7 @@ Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od u
 	CharacterMovementComponent jest składową klasy Character odpowiedzialnej za przemieszczanie się awatara która automatycznie obsługuje networking.  System predykcji, replikacji i korekcji w sieciowych grach korzystających z CharacterMovementComponent działa w następujący sposób \cite{docs-charactermovementcomponent}. Co klatkę wywoływana jest metoda TickComponent gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie  w zależności od tego czy Character jest kontrolowany lokalnie czy sieciowo wywoływana jest metoda PerformMovement lub ReplicateMoveToServer. Metoda ReplicateMoveToServer dodaje ruch do listy oczekujących ruchów, następnie wywołuje lokalnie metodę PerformMovement i replikuje ruch na serwer poprzez zdalne wywołanie metody ServerMove. ServerMove przesuwa postać na serwerze na odpowiednie miejsce a następnie oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer  zdalnie wywołuje procedurę ClientAdjustPosition na kliencie, która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta a jego pozycja zostanie poprawiona metoda ClientAdjustPosition wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących po ruchu który został poprawiony przez serwer.
 	CharacterMovementComponent posiada system symulacji i wygładzania. Dane o aktorze takie jak jego pozycja, prędkość czy rotacja są replikowane na inne maszyny za pomocą standardowego mechanizmu replikacji. Oznacza to, że maszyny nie dostają potrzebnych im informacji co klatkę. Wymusza to potrzebę symulacji zmian w położeniu postaci pomiędzy kolejnymi pakietami danych. Symulacja polega na przesuwaniu obiektu klasy Character zgodnie z ostatnio otrzymanymi danymi na temat jego ruchu. Gdy symulacja odbiega od rzeczywistych zmian, które zaszły na innych maszynach, UE4 wygładza zmianę pozycji w celu uniknięcia nagłego widocznego skoku pozycji awatara.
 	Z powodu tych systemów wszystkie zdolności postaci modyfikujące jej położenie powinny zostać zaimplementowane poprzez rozszerzenie klasy CharacterMovementComponent.
-Na potrzeby projektu, aby dodać możliwość uniku, polegającego na gwałtownym odskoku postaci w danym kierunku stworzona została klasa BaseCharacterMovementComponent. Implementacja polegała na nadpisaniu niezbędnych metod klasy bazowej. TickComponent oprócz swojego pierwotnego zadania sprawdza czy gracz wciska przycisk odpowiedzialny za unik. Jeżeli tak, dodawane są symulowane dane wejściowe, które naśladują poruszanie się gracza w odpowiednim kierunku. W celu zapewnienia szybszego poruszania się postaci podczas uniku, nadpisano metody GetMaxSpeed oraz GetMaxAcceleration które w zależności od zmiennej wskazującej na to czy postać wykonuje unik zwracają różne wartości. Ponadto wymagane było stworzenie klas używanych do predykcji i zapisywania ruchu na listę oczekujących w taki sposób by ewentualna poprawa ruchu spowodowana opóźnieniami transmisji danych uwzględniła kliknięcie przez gracza przycisku uniku.
+Na potrzeby projektu, aby dodać możliwość uniku, polegającego na gwałtownym odskoku postaci w danym kierunku stworzona została klasa BaseCharacterMovementComponent. Implementacja polegała na nadpisaniu niezbędnych metod klasy bazowej\cite{uewiki-charmovement}. TickComponent oprócz swojego pierwotnego zadania sprawdza czy gracz wciska przycisk odpowiedzialny za unik. Jeżeli tak, dodawane są symulowane dane wejściowe, które naśladują poruszanie się gracza w odpowiednim kierunku. W celu zapewnienia szybszego poruszania się postaci podczas uniku, nadpisano metody GetMaxSpeed oraz GetMaxAcceleration które w zależności od zmiennej wskazującej na to czy postać wykonuje unik zwracają różne wartości. Ponadto wymagane było stworzenie klas używanych do predykcji i zapisywania ruchu na listę oczekujących w taki sposób by ewentualna poprawa ruchu spowodowana opóźnieniami transmisji danych uwzględniła kliknięcie przez gracza przycisku uniku.
 	\subsection{Skill}
 	Jedną z głównych cech gry ,,thesis\_1`` jest możliwość wyboru czterech z wielu dostępnych zdolności do używania w trakcie rozgrywki. W tym celu powstała klasa {\em Skill} reprezentująca daną zdolność. Klasa ta powstała za pomocą kodu {\em C++} z myślą o rozszerzaniu jej blueprintami, co umożliwiają znaczniki {\em Blueprintable} oraz {\em BlueprintNativeEvent} użyte w nagłówku klasy. Każda klasa dziedzicząca po {\em Skill} reprezentuje jedną zdolność i nadpisuje bazowe funkcje {\em OnPress} oraz {\em OnRelease} logiką danej zdolności. Decyduje też o tym, które klasy postaci mogą używać danej zdolności.
 	\subsection{Wybór postaci i zdolności}
@@ -260,10 +260,14 @@ Trevir Nath, \textit{Investing in Video Games: This Industry Pulls In More Reven
 Justin Slick, \textit{What is Rigging? Preparing a 3D Model For Animation }, \url{https://www.lifewire.com/what-is-rigging-2095}  (dostęp 3.01.2018)
 
 \bibitem{docs-playercontroller}
-\textit{UE4 Documentation - Player Controller}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/Controller/PlayerController/}  (dostęp 3.01.2018)
+\textit{UE4 - Documentation - Player Controller}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/Controller/PlayerController/}  (dostęp 3.01.2018)
 
 \bibitem{docs-charactermovementcomponent}
-\textit{UE4 Documentation - Character Movement Component}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Networking/CharacterMovementComponent/index.html}  (dostęp 3.01.2018)
+\textit{UE4 - Documentation - Character Movement Component}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Networking/CharacterMovementComponent/index.html}  (dostęp 3.01.2018)
+
+\bibitem{uewiki-charmovement}
+\textit{UE4 Wiki - Authoritative Networked Character Movement}, \url{https://wiki.unrealengine.com/Authoritative_Networked_Character_Movement}  (dostęp 3.01.2018)
+
 
 \end{thebibliography}
 
